--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,9 +18,8 @@ class: "post-template"
   }}) {% else %}no-cover{% endif %}"
 >
   <nav class="main-nav {% if page.cover %} overlay {% endif %} clearfix">
-    {% include logo.html %} {% if page.navigation %}
+    {% include logo.html %} 
     <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
-    {% endif %}
   </nav>
 </header>
 
